[gd_scene load_steps=5 format=3 uid="uid://duh7cau5ov6xa"]

[ext_resource type="Script" path="res://Scripts/Creatures/unit.gd" id="1_85bg6"]
[ext_resource type="PackedScene" uid="uid://byspbid24ryvm" path="res://scenes/Other/shooting.tscn" id="2_e8au4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3rggi"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s7yoq"]
radius = 218.037

[node name="Unit" type="CharacterBody2D"]
z_index = 1
position = Vector2(-1, 0)
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_85bg6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3rggi")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="LineOfSight" type="Area2D" parent="."]

[node name="LineOfSightCollision" type="CollisionShape2D" parent="LineOfSight"]
shape = SubResource("CircleShape2D_s7yoq")

[node name="CheckTarget" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SpawnSFX" type="AudioStreamPlayer2D" parent="."]

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="."]

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]

[node name="Shooting" parent="." instance=ExtResource("2_e8au4")]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="LineOfSight" to="." method="_on_line_of_sight_body_entered"]
[connection signal="body_exited" from="LineOfSight" to="." method="_on_line_of_sight_body_exited"]
[connection signal="timeout" from="CheckTarget" to="." method="_on_check_target_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
